[package]
name = "alloy_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.1", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.30"
ethereum-types = "0.14.1"
cron = "0.12.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
reqwest = "0.12.5"